# Adalex-UI

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  adalex_ui-0.1.0-py3-none-any.whl  package.json  pyproject.toml  requirements.txt  setup.cfg
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: branch-protection.yml
adalex_ui/: __init__.py  apps.py  utils.py
adalex_ui/static/a-ui/css/: main.css
adalex_ui/static/a-ui/js/: main.js
adalex_ui/static/a-ui/js/components/: accordion.js  alert.js  auth.js  carousel.js  confirm.js  drawer.js  dropdown.js  file_upload.js  form.js  loading.js  modal.js  navbar.js  notification.js  sidebar.js  table.js  tabs.js  tag.js  tooltip.js
adalex_ui/static/a-ui/js/utils/: error-handler.js  keyboard-nav.js
adalex_ui/static/a-ui/scss/: _reset.scss  _tokens.scss  _utilities.scss  main.scss
adalex_ui/static/a-ui/scss/components/: _accordion.scss  _alert.scss  _avatar.scss  _badge.scss  _breadcrumb.scss  _button.scss  _card.scss  _carousel.scss  _checkbox.scss  _confirm_dialog.scss  (+32 more)
adalex_ui/templates/components/: accordion.html  alert.html  avatar.html  badge.html  breadcrumb.html  button.html  card.html  carousel.html  checkbox.html  confirm_dialog.html  datepicker.html  detail_view.html  drawer.html  dropdown.html  empty_state.html  file_upload.html  filter_bar.html  form.html  icon.html  label.html  loading_bar.html  login_form.html  modal.html  navbar.html  notification.html  pagination.html  progress.html  radio.html  register_form.html  select.html  sidebar.html  skeleton.html  spinner.html  stat_card.html  stepper.html  switch.html  table.html  tabs.html  tag.html  text_input.html  (+3 more)
adalex_ui/templates/layouts/: dashboard.html
adalex_ui/templatetags/: a_ui_tags.py
docs/: BRANCH_PROTECTION.md  COMPONENTS.md
examples/playground/demo/: apps.py  urls.py  views.py
examples/playground/playground/: settings.py  urls.py  wsgi.py
examples/playground/templates/demo/: accessibility_demo.html  auth_demo.html  carousel_demo.html  components_advanced.html  components_complex.html  components_ui.html  detail_demo.html  dialogs_demo.html  filter_demo.html  form_demo.html  forms_advanced.html  forms_basic.html  index.html  loading_demo.html  navigation_demo.html  new_components_demo.html  table_demo.html  upload_demo.html
(+1 files in other folders)
