[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adalex-ui"
version = "0.1.0"
description = "A reusable Django UI component library with design token system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "mtalhayasar", email = "mtalhayasar@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/mtalhayasar/Adalex-UI"
Documentation = "https://github.com/mtalhayasar/Adalex-UI/tree/main/docs"
Repository = "https://github.com/mtalhayasar/Adalex-UI"
Issues = "https://github.com/mtalhayasar/Adalex-UI/issues"

[tool.setuptools]
packages = ["adalex_ui"]
include-package-data = true

[tool.setuptools.package-data]
adalex_ui = [
    "templates/**/*",
    "static/**/*",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=adalex_ui --cov-report=html --cov-report=term-missing"
