[metadata]
name = adalex-ui
version = attr: adalex_ui.__version__

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    Django>=4.0

[options.packages.find]
exclude =
    examples*
    docs*
    tests*

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    */migrations/*,
    */static/*,
    node_modules
